apps/bgd/overlays/rollouts-bluegreen-demo/bluegreen-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bluegreen-demo
  name: bluegreen-demo
spec:
  replicas: 0
  selector:
    matchLabels:
      app: bluegreen-demo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bluegreen-demo
    spec:
      containers:
      - name: bluegreen-demo
        image: argoproj/rollouts-demo:blue
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
---
