apps/bgd/overlays/rollouts-bluegreen-demo/bluegreen-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bluegreen-demo
spec:
  port:
    targetPort: http 
  tls: 
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: bluegreen-demo
    weight: 100 
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: bluegreen-demo-preview
spec:
  to:
    kind: Service
    name: bluegreen-demo-preview
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
